pa2_parser/cool.output
Терминалы не используются в грамматике

   ERROR


Состояние 11 конфликты: 2 сдвига/вывода
Состояние 17 конфликты: 2 сдвига/вывода
Состояние 127 конфликты: 9 сдвига/вывода
Состояние 140 конфликты: 9 сдвига/вывода
Состояние 141 конфликты: 9 сдвига/вывода


Грамматика

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature ';'
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID ':' TYPEID ASSIGN expression
   12        | OBJECTID ':' TYPEID
   13        | error

   14 formal_list: %empty
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expression_list: %empty
   19                | expression
   20                | expression_list ',' expression

   21 expression_block: expression ';'
   22                 | expression_block expression ';'
   23                 | error ';'

   24 expression_let: OBJECTID ':' TYPEID IN expression
   25               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID ':' TYPEID ASSIGN error IN expression
   27               | OBJECTID ':' TYPEID ',' expression_let
   28               | OBJECTID ':' TYPEID ASSIGN expression ',' expression_let

   29 expression_case: OBJECTID ':' TYPEID DARROW expression ';'

   30 expression_case_list: expression_case
   31                     | expression_case_list expression_case

   32 expression: OBJECTID ASSIGN expression
   33           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression '.' OBJECTID '(' expression_list ')'
   35           | OBJECTID '(' expression_list ')'
   36           | IF expression THEN expression ELSE expression FI
   37           | WHILE expression LOOP expression POOL
   38           | '{' expression_block '}'
   39           | '{' error '}'
   40           | LET expression_let
   41           | CASE expression OF expression_case_list ESAC
   42           | NEW TYPEID
   43           | ISVOID expression
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | '~' expression
   49           | expression '<' expression
   50           | expression LE expression
   51           | expression '=' expression
   52           | NOT expression
   53           | '(' expression ')'
   54           | OBJECTID
   55           | INT_CONST
   56           | STR_CONST
   57           | BOOL_CONST


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'(' (40) 10 33 34 35 53
')' (41) 10 33 34 35 53
'*' (42) 46
'+' (43) 44
',' (44) 16 20 27 28
'-' (45) 45
'.' (46) 33 34
'/' (47) 47
':' (58) 10 11 12 17 24 25 26 27 28 29
';' (59) 4 5 6 8 9 21 22 23 29
'<' (60) 49
'=' (61) 51
'@' (64) 33
'{' (123) 4 5 10 38 39
'}' (125) 4 5 10 38 39
'~' (126) 48
error (256) 6 13 23 26 39
CLASS (258) 4 5
ELSE (259) 36
FI (260) 36
IF (261) 36
IN (262) 24 25 26
INHERITS (263) 5
LET (264) 40
LOOP (265) 37
POOL (266) 37
THEN (267) 36
WHILE (268) 37
CASE (269) 41
ESAC (270) 41
OF (271) 41
DARROW (272) 29
NEW (273) 42
ISVOID (274) 43
STR_CONST <symbol> (275) 56
INT_CONST <symbol> (276) 55
BOOL_CONST <boolean> (277) 57
TYPEID <symbol> (278) 4 5 10 11 12 17 24 25 26 27 28 29 33 42
OBJECTID <symbol> (279) 10 11 12 17 24 25 26 27 28 29 32 33 34 35 54
ASSIGN (280) 11 25 26 28 32
NOT (281) 52
LE (282) 50
ERROR (283)


Нетерминальные символы с правилами, в которых они появляются

$accept (45)
    налево: 0
program <program> (46)
    налево: 1, направо: 0
class_list <classes> (47)
    налево: 2 3, направо: 1 3
class <class_> (48)
    налево: 4 5 6, направо: 2 3
feature_list <features> (49)
    налево: 7 8 9, направо: 4 5 9
feature <feature> (50)
    налево: 10 11 12 13, направо: 8 9
formal_list <formals> (51)
    налево: 14 15 16, направо: 10 16
formal <formal> (52)
    налево: 17, направо: 15 16
expression_list <expressions> (53)
    налево: 18 19 20, направо: 20 33 34 35
expression_block <expressions> (54)
    налево: 21 22 23, направо: 22 38
expression_let <expression> (55)
    налево: 24 25 26 27 28, направо: 27 28 40
expression_case <case_> (56)
    налево: 29, направо: 30 31
expression_case_list <cases> (57)
    налево: 30 31, направо: 31 41
expression <expression> (58)
    налево: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57, направо: 10 11 19 20 21 22 24
    25 26 28 29 32 33 34 36 37 41 43 44 45 46 47 48 49 50 51 52 53


State 0

    0 $accept: . program $end

    error  сдвиг, и переход в состояние 1
    CLASS  сдвиг, и переход в состояние 2

    program     переход в состояние 3
    class_list  переход в состояние 4
    class       переход в состояние 5


State 1

    6 class: error . ';'

    ';'  сдвиг, и переход в состояние 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  сдвиг, и переход в состояние 7


State 3

    0 $accept: program . $end

    $end  сдвиг, и переход в состояние 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  сдвиг, и переход в состояние 1
    CLASS  сдвиг, и переход в состояние 2

    $end  вывод с использованием правила 1 (program)

    class  переход в состояние 9


State 5

    2 class_list: class .

    $default  вывод с использованием правила 2 (class_list)


State 6

    6 class: error ';' .

    $default  вывод с использованием правила 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  сдвиг, и переход в состояние 10
    '{'       сдвиг, и переход в состояние 11


State 8

    0 $accept: program $end .

    $default  принять


State 9

    3 class_list: class_list class .

    $default  вывод с использованием правила 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  сдвиг, и переход в состояние 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     сдвиг, и переход в состояние 13
    OBJECTID  сдвиг, и переход в состояние 14

    error     [вывод с использованием правила 7 (feature_list)]
    OBJECTID  [вывод с использованием правила 7 (feature_list)]
    '}'       вывод с использованием правила 7 (feature_list)

    feature_list  переход в состояние 15
    feature       переход в состояние 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  сдвиг, и переход в состояние 17


State 13

   13 feature: error .

    $default  вывод с использованием правила 13 (feature)


State 14

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . ':' TYPEID ASSIGN expression
   12        | OBJECTID . ':' TYPEID

    '('  сдвиг, и переход в состояние 18
    ':'  сдвиг, и переход в состояние 19


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     сдвиг, и переход в состояние 13
    OBJECTID  сдвиг, и переход в состояние 14
    '}'       сдвиг, и переход в состояние 20

    feature  переход в состояние 21


State 16

    8 feature_list: feature . ';'

    ';'  сдвиг, и переход в состояние 22


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     сдвиг, и переход в состояние 13
    OBJECTID  сдвиг, и переход в состояние 14

    error     [вывод с использованием правила 7 (feature_list)]
    OBJECTID  [вывод с использованием правила 7 (feature_list)]
    '}'       вывод с использованием правила 7 (feature_list)

    feature_list  переход в состояние 23
    feature       переход в состояние 16


State 18

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 14 (formal_list)

    formal_list  переход в состояние 25
    formal       переход в состояние 26


State 19

   11 feature: OBJECTID ':' . TYPEID ASSIGN expression
   12        | OBJECTID ':' . TYPEID

    TYPEID  сдвиг, и переход в состояние 27


State 20

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  сдвиг, и переход в состояние 28


State 21

    9 feature_list: feature_list feature . ';'

    ';'  сдвиг, и переход в состояние 29


State 22

    8 feature_list: feature ';' .

    $default  вывод с использованием правила 8 (feature_list)


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    error     сдвиг, и переход в состояние 13
    OBJECTID  сдвиг, и переход в состояние 14
    '}'       сдвиг, и переход в состояние 30

    feature  переход в состояние 21


State 24

   17 formal: OBJECTID . ':' TYPEID

    ':'  сдвиг, и переход в состояние 31


State 25

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   16 formal_list: formal_list . ',' formal

    ')'  сдвиг, и переход в состояние 32
    ','  сдвиг, и переход в состояние 33


State 26

   15 formal_list: formal .

    $default  вывод с использованием правила 15 (formal_list)


State 27

   11 feature: OBJECTID ':' TYPEID . ASSIGN expression
   12        | OBJECTID ':' TYPEID .

    ASSIGN  сдвиг, и переход в состояние 34

    $default  вывод с использованием правила 12 (feature)


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  вывод с использованием правила 4 (class)


State 29

    9 feature_list: feature_list feature ';' .

    $default  вывод с использованием правила 9 (feature_list)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  сдвиг, и переход в состояние 35


State 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  сдвиг, и переход в состояние 36


State 32

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  сдвиг, и переход в состояние 37


State 33

   16 formal_list: formal_list ',' . formal

    OBJECTID  сдвиг, и переход в состояние 24

    formal  переход в состояние 38


State 34

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 53


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  вывод с использованием правила 5 (class)


State 36

   17 formal: OBJECTID ':' TYPEID .

    $default  вывод с использованием правила 17 (formal)


State 37

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  сдвиг, и переход в состояние 54


State 38

   16 formal_list: formal_list ',' formal .

    $default  вывод с использованием правила 16 (formal_list)


State 39

   36 expression: IF . expression THEN expression ELSE expression FI

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 55


State 40

   40 expression: LET . expression_let

    OBJECTID  сдвиг, и переход в состояние 56

    expression_let  переход в состояние 57


State 41

   37 expression: WHILE . expression LOOP expression POOL

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 58


State 42

   41 expression: CASE . expression OF expression_case_list ESAC

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 59


State 43

   42 expression: NEW . TYPEID

    TYPEID  сдвиг, и переход в состояние 60


State 44

   43 expression: ISVOID . expression

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 61


State 45

   56 expression: STR_CONST .

    $default  вывод с использованием правила 56 (expression)


State 46

   55 expression: INT_CONST .

    $default  вывод с использованием правила 55 (expression)


State 47

   57 expression: BOOL_CONST .

    $default  вывод с использованием правила 57 (expression)


State 48

   32 expression: OBJECTID . ASSIGN expression
   35           | OBJECTID . '(' expression_list ')'
   54           | OBJECTID .

    ASSIGN  сдвиг, и переход в состояние 62
    '('     сдвиг, и переход в состояние 63

    $default  вывод с использованием правила 54 (expression)


State 49

   52 expression: NOT . expression

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 64


State 50

   48 expression: '~' . expression

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 65


State 51

   38 expression: '{' . expression_block '}'
   39           | '{' . error '}'

    error       сдвиг, и переход в состояние 66
    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression_block  переход в состояние 67
    expression        переход в состояние 68


State 52

   53 expression: '(' . expression ')'

    IF          сдвиг, и переход в состояние 39
    LET         сдвиг, и переход в состояние 40
    WHILE       сдвиг, и переход в состояние 41
    CASE        сдвиг, и переход в состояние 42
    NEW         сдвиг, и переход в состояние 43
    ISVOID      сдвиг, и переход в состояние 44
    STR_CONST   сдвиг, и переход в состояние 45
    INT_CONST   сдвиг, и переход в состояние 46
    BOOL_CONST  сдвиг, и переход в состояние 47
    OBJECTID    сдвиг, и переход в состояние 48
    NOT         сдвиг, и переход в состояние 49
    '~'         сдвиг, и переход в состояние 50
    '{'         сдвиг, и переход в состояние 51
    '('         сдвиг, и переход в состояние 52

    expression  переход в состояние 69


State 53

   11 feature: OBJECTID ':' TYPEID ASSIGN expression .
   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LE   сдвиг, и переход в состояние 70
    '<'  сдвиг, и переход в состояние 71
    '='  сдвиг, и переход в состояние 72
    '+'  сдвиг, и переход в состояние 73
    '-'  сдвиг, и переход в состояние 74
    '*'  сдвиг, и переход в состояние 75
    '/'  сдвиг, и переход в состояние 76
    '@'  сдвиг, и переход в состояние 77
    '.'  сдвиг, и переход в состояние 78

    $default  вывод с использованием правила 11 (feature)


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  сдвиг, и переход в состояние 79


State 55

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   36           | IF expression . THEN expression ELSE expression FI
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    THEN  сдвиг, и переход в состояние 80
    LE    сдвиг, и переход в состояние 70
    '<'   сдвиг, и переход в состояние 71
    '='   сдвиг, и переход в состояние 72
    '+'   сдвиг, и переход в состояние 73
    '-'   сдвиг, и переход в состояние 74
    '*'   сдвиг, и переход в состояние 75
    '/'   сдвиг, и переход в состояние 76
    '@'   сдвиг, и переход в состояние 77
    '.'   сдвиг, и переход в состояние 78


State 56

   24 expression_let: OBJECTID . ':' TYPEID IN expression
   25               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26               | OBJECTID . ':' TYPEID ASSIGN error IN expression
   27               | OBJECTID . ':' TYPEID ',' expression_let
   28               | OBJECTID . ':' TYPEID ASSIGN expression ',' expression_let

    ':'  сдвиг, и переход в состояние 81


State 57

   40 expression: LET expression_let .

    $default  вывод с использованием правила 40 (expression)


State 58

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   37           | WHILE expression . LOOP expression POOL
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    LOOP  сдвиг, и переход в состояние 82
    LE    сдвиг, и переход в состояние 70
    '<'   сдвиг, и переход в состояние 71
    '='   сдвиг, и переход в состояние 72
    '+'   сдвиг, и переход в состояние 73
    '-'   сдвиг, и переход в состояние 74
    '*'   сдвиг, и переход в состояние 75
    '/'   сдвиг, и переход в состояние 76
    '@'   сдвиг, и переход в состояние 77
    '.'   сдвиг, и переход в состояние 78


State 59

   33 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | expression . '.' OBJECTID '(' expression_list ')'
   41           | CASE expression . OF expression_case_list ESAC
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | expression . '<' expression
   50           | expression . LE expression
   51           | expression . '=' expression

    OF   сдвиг, и переход в состояние 83
    LE   сдвиг, и переход в состояние 70
    '<'  сдвиг, и переход в состояние 71
    '='  сдвиг, и переход в состояние 72
    '+'  сдвиг, и переход в состояние 73
    '-'  сдвиг, и переход в состояние 74
    '*'  сдвиг, и переход в состояние 75
    '/'  сдвиг, и переход в состояние 76
    '@'  сдвиг, и переход в состояние 77
    '.'  сдвиг, и переход в состояние 78


State 60

   42 expression: NEW TYPEID .

    $default  вывод с использованием правила 42 (expression)


State 61
